Fixes #25343 - Prevent long lines from overflowing the console

--- a/app/assets/stylesheets/foreman_remote_execution/template_invocation.css.scss
+++ b/app/assets/stylesheets/foreman_remote_execution/template_invocation.css.scss
@@ -44,7 +44,7 @@ div.terminal {
   div.line div.content {
     position: relative;
     margin-left: 50px;
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   a {
